--- a/content/resources/21h-s01f14-th.md
+++ b/content/resources/21h-s01f14-th.md
@@ -4,7 +4,7 @@ description: This popular snack cake, which is rumored to never expire, has been
   fixture in pop culture and grocery stores since 1930. This course will examine the
   globalization of food as well as consumption patterns and the history of sugar,
   among other topics. Image courtesy of Christian Cable on flickr. License CC BY.
-file: /media/courses/21h-s01-food-in-american-history-fall-2014/8f35c244fd5588266a1ffc5d7245595c_21h-s01f14-th.jpg
+file: /courses/21h-s01-food-in-american-history-fall-2014/8f35c244fd5588266a1ffc5d7245595c_21h-s01f14-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: This popular snack cake, which is rumored to never expire, has been a fixture
@@ -20,3 +20,5 @@ resourcetype: Image
 title: Snack Cakes (thumbnail)
 uid: 8f35c244-fd55-8826-6a1f-fc5d7245595c
 ---
+This popular snack cake, which is rumored to never expire, has been a fixture in pop culture and grocery stores since 1930. This course will examine the globalization of food as well as consumption patterns and the history of sugar, among other topics. Image courtesy of Christian Cable on flickr. License CC BY.
+
