--- a/content/resources/21h-s01f14.md
+++ b/content/resources/21h-s01f14.md
@@ -15,10 +15,10 @@ image_metadata:
   credit: Image courtesy of Christian Cable on flickr. License CC BY.
   image-alt: A plate of yellow sponge cakes filled with cream in the center.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: Snack Cakes
 uid: 673473b0-8f68-bc25-674c-3e2686a9d71e
 ---
 This popular snack cake, which is rumored to never expire, has been a fixture in pop culture and grocery stores since 1930. This course will examine the globalization of food as well as consumption patterns and the history of sugar, among other topics. Image courtesy of Christian Cable on flickr. License CC BY.
-
