Sync all content

--- a/content/resources/21h-s01f14-th.md
+++ b/content/resources/21h-s01f14-th.md
@@ -5,6 +5,7 @@ description: This popular snack cake, which is rumored to never expire, has been
   globalization of food as well as consumption patterns and the history of sugar,
   among other topics. Image courtesy of Christian Cable on flickr. License CC BY.
 file: /courses/21h-s01-food-in-american-history-fall-2014/8f35c244fd5588266a1ffc5d7245595c_21h-s01f14-th.jpg
+file_size: 10960
 file_type: image/jpeg
 image_metadata:
   caption: This popular snack cake, which is rumored to never expire, has been a fixture
