--- a/content/resources/21h-s01f14-th.md
+++ b/content/resources/21h-s01f14-th.md
@@ -11,8 +11,8 @@ image_metadata:
   caption: This popular snack cake, which is rumored to never expire, has been a fixture
     in pop culture and grocery stores since 1930. This course will examine the globalization
     of food as well as consumption patterns and the history of sugar, among other
-    topics. (Image courtesy of [Christian Cable](https://flic.kr/p/7Ywntm) on flickr.
-    License CC BY.)
+    topics. (Image courtesy of {{% resource_link "69c62ae6-3953-4ecc-9e42-5dbdde5ab058"
+    "Christian Cable" %}} on flickr. License CC BY.)
   credit: Image courtesy of Christian Cable on flickr. License CC BY.
   image-alt: A plate of yellow sponge cakes filled with cream in the center.
 learning_resource_types: []
